# HPM

./: .gitignore  CLAUDE.md  architecture.md  handoff.md  implementation.md  phaseA_celeba_contrastive.md  pyproject.toml  roadmap.md  run.txt  train_hpm.py
configs/: config.yaml
configs/data/: celeba.yaml  vggface2.yaml
configs/experiment/: baseline_identical.yaml  callosum_lesion.yaml  freq_only.yaml  fusion_ablate.yaml  fusion_swap.yaml  param_matched.yaml  phaseA_celeba_contrastive.yaml  phaseA_identity_only.yaml  role_crossover.yaml  task_only.yaml
configs/model/: callosum.yaml  default.yaml  fusion.yaml  streams.yaml
configs/train/: default.yaml
notebooks/: phaseA_celeba_colab.ipynb
src/hpm/: train.py  train_contrastive.py
src/hpm/data/: dataset.py  sampler.py  splits.py  transforms.py
src/hpm/eval/: composite.py  inversion.py  part_whole.py  readout_inspect.py  signatures.py  verification.py
src/hpm/losses/: contrastive.py  identity.py  reconstruction.py  weighting.py
src/hpm/models/: callosum.py  decoders.py  fusion.py  heads.py  hpm_model.py  streams.py
src/hpm/utils/: checkpoint.py  logging.py  (+2 more)
tests/: conftest.py
tests/test_data/: test_dataset.py  test_sampler.py  test_splits.py  test_transforms.py
tests/test_eval/: test_composite.py  test_inversion.py  test_part_whole.py  test_verification.py
tests/test_losses/: test_contrastive.py  test_losses.py
tests/test_models/: test_callosum.py  test_decoders.py  test_fusion.py  test_heads.py  test_hpm_model.py  test_streams.py
tests/test_utils/: test_checkpoint.py  test_results.py
